# light-curve

light-curve-feature/: Cargo.toml
light-curve-feature/benches/: extractor.rs
light-curve-feature/src/: evaluator.rs  float_trait.rs  lib.rs  macros.rs  tests.rs  time_series.rs
light-curve-feature/src/features/: amplitude.rs  anderson_darling_normal.rs  bazin_fit.rs  beyond_n_std.rs  bins.rs  cusum.rs  eta.rs  eta_e.rs  excess_variance.rs  kurtosis.rs  linear_fit.rs  linear_trend.rs  magnitude_percentage_ratio.rs  maximum_slope.rs  median.rs  median_absolute_deviation.rs  median_buffer_range_percentage.rs  periodogram.rs  reduced_chi2.rs  skew.rs  stetson_k.rs  weighted_mean.rs
light-curve-feature/src/features/antifeatures/: duration.rs  maximum_time_interval.rs  minimum_time_interval.rs
light-curve-feature/src/fit/: car.rs  mod.rs
light-curve-feature/src/periodogram/: power_fft.rs
