[package]
name = "light-curve-feature"
version = "0.1.3"
description = "Feature extractor from noisy time series"
repository = "https://github.com/hombit/light-curve"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
light-curve-common = "0.1.0"
num-traits = "0.2"
conv = "0.3"
argmin = "0.2"
serde = "1.0"

[dev-dependencies]
rand = "0.7"
rand_distr = "0.2"
rand_pcg = "0.2"
criterion = "0.2"

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false
